<resources>
    <string name="app_name">Nutritional Assistant</string>

    // String Resources for activities names
    <string name="activity_configuration">Configuration</string>
    <string name="activity_category">Category List</string>
    <string name="activity_all_ingredients">All Ingredients List</string>
    <string name="activity_ingredient_details">Ingredient Details</string>
    <string name="activity_ingredients_by_category">Ingredients By Category</string>
    <string name="activity_favorite_list">Favorites List</string>
    <string name="activity_recipe_list">Recipe List</string>

    // Common Strings
    <string name="save">Save</string>
    <string name="none">None</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="invalid_option">Invalid Option. Something went wrong :(</string>
    <string name="undo">UNDO</string>
    <string name="ing_removed_from_fav_success">Successfully removed ingredient from favorite</string>
    <string name="ing_removed_from_fav_fail">Failed to remove ingredient from favorite</string>
    <string name="are_you_sure_delete_recipe_title">Delete Recipe</string>
    <string name="are_you_sure_delete_recipe_msg">Are you sure that you want to remove this recipe?</string>

    <string name="base_url_for_taco" translatable="false">"https://taco-alimentos.herokuapp.com/"</string>

    // Strings used for Menu Labeling
    <string name="menu_by_category_label">By Category</string>
    <string name="menu_all_ingred_list_label">All Ingredients</string>
    <string name="menu_fav_list_label">Favorites List</string>
    <string name="menu_recipes_list_label">Recipes List</string>
    <string name="menu_config_label">Configuration</string>

    // Strings for Configuration Activity
    <string name="config_popup_first_time_title">Initial Configuration</string>
    <string name="config_popup_first_time_body">Welcome Aboard!\nBefore start using \"%1$s\",
        lets run some initial configuration, ok?</string>
    <string name="config_label_allow_mobile_connection">Allow Mobile Data Connection</string>
    <string name="config_button_config_account">Configure Account</string>
    <string name="config_account">"Configured Account: "</string>
    <string name="configuration_not_saved">Configuration not saved...</string>

    // Strings for Ingredient Details Activity
    <string name="img_btn_favorite">Button to save this Ingredient in Favorite List!</string>
    <string name="ing_det_energy_label">Energy (Kcal):</string>
    <string name="ing_det_protein_label">Protein (g):</string>
    <string name="ing_det_lipids_label">Lipids (g):</string>
    <string name="ing_det_cholesterol_label">Cholesterol (mg):</string>
    <string name="ing_det_carbohydrate_label">Carbohydrate (g):</string>
    <string name="ing_det_foodFiber_label">Food Fiber (g):</string>
    <string name="ing_det_ashes_label">Ashes (g):</string>
    <string name="ing_det_calcium_label">Calcium (mg):</string>
    <string name="ing_det_magnesium_label">Magnesium (mg):</string>
    <string name="ing_det_manganese_label">Manganese (mg):</string>
    <string name="ing_det_phosphor_label">Phosphor (mg):</string>
    <string name="ing_det_iron_label">Iron (mg):</string>
    <string name="ing_det_sodium_label">Sodium (mg):</string>
    <string name="ing_det_potassium_label">Potassium (mg):</string>
    <string name="ing_det_copper_label">Copper (mg):</string>
    <string name="ing_det_zinc_label">Zinc (mg):</string>
    <string name="ing_det_retinol_label">Retinol (µg):</string>
    <string name="ing_det_re_label">RE (µg):</string>
    <string name="ing_det_rae_label">RAE (µg):</string>
    <string name="ing_det_thiamine_label">Thiamine (mg):</string>
    <string name="ing_det_riboflavin_label">Riboflavin (mg):</string>
    <string name="ing_det_pyridoxine_label">Pyridoxine (mg):</string>
    <string name="ing_det_niacin_label">Niacin (mg):</string>
    <string name="ing_det_vitaminc_label">Vitamin C (mg):</string>
    <string name="save_to_fav_success">Successfully saved this ingredient in the Favorite List!</string>
    <string name="save_to_fav_fail">Failed to save this ingredient in the Favorite List :(</string>
    <string name="rem_from_fav_success">Successfully removed this ingredient from the Favorite List!</string>
    <string name="rem_from_fav_fail">Failed to remove this ingredient from the Favorite List :(</string>
    <string name="ingredient_compose_info">* Composition of food per 100g of edible portion</string>
    <string name="failed_to_save_ingredient_offline">Failed to save this ingredient offline</string>

    // Strings for Create New Recipe Dialog
    <string name="dialog_new_recipe_title">Create New Recipe</string>
    <string name="hint_add_new_recipe">Insert a new recipe name</string>
    <string name="recipe_already_exists">This recipe already exists! Please try another name.</string>
    <string name="recipe_successfully_registered">Recipe registered successfully!</string>
    <string name="recipe_register_fail">Failed to register this recipe :(</string>
    <string name="recipe_empty_field_not_allowed">Empty field! Please insert a Recipe Name.</string>
    <string name="recipe_fail_delete">Failed to delete this recipe</string>
    <string name="recipe_delete_success">Recipe deleted successfully</string>

    // Strings for Recipe Details Activity
    <string name="add_new_ingredient">-- Add new Ingredient from Favorite List --</string>
    <string name="remove_from_recipe_success">Successfully removed this ingredient from the recipe.</string>

    // Strings for Favorite List Activity
    <string name="no_ingred_in_fav">-- No ingredient in Favorites List --</string>

    // Strings for Recipe List Activity
    <string name="no_recipe">-- No Recipe registered --</string>

    // Strings for the Widget Configuration Activity
    <string name="widget_choose_recipe">Choose a Recipe:</string>
    <string name="widget_generate_btn">Generate Recipe Widget</string>
    <string name="widget_operation_canceled">Widget creation operation canceled...</string>
    <string name="widget_no_recipe">-- No recipe yet created --"</string>

</resources>
