<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.dofukuhara.nutritionalassistant.ui.ConfigurationActivity">

    <CheckBox
        android:id="@+id/cb_allow_mobile_data_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/config_label_allow_mobile_connection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_account_config_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/config_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_allow_mobile_data_connection" />

    <TextView
        android:id="@+id/tv_account_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        android:text="@string/none"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_account_config_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_account_config_label" />

    <Button
        android:id="@+id/btn_config_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/config_button_config_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_config_label" />

    <Button
        android:id="@+id/btn_save_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_config_account" />

</android.support.constraint.ConstraintLayout>
